Code clean and pretty big changes in code
